Added Reload To the Actual Game

--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -73,5 +73,6 @@
 			
 			</section> <!-- /.paper --> 
 		</div> <!-- /.container -->
+		<script src="js/gameLogic.js" language="javascript"></script>		
 	</body>
 </html>
