Implemented CountDown Timer
Implemented a simple countdown timer using the setInterval method.

--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -31,7 +31,7 @@
 			
 				<div class="col-md-4">
 					<div class="timer">
-						<p>Time Left: <span="secondsLeft">75</span></p> 
+						<p>Time Left: <span id="secondsLeft"></span></p> 
 					</div> <!-- /.timer -->
 				</div> <!-- /.col-md-4 -->
 			</section></center> <!-- /.currentGameInfo row -->
@@ -43,7 +43,7 @@
 			
 			<center><div class="row questionGeneratedRow">
 				<div class="col-md-12">
-					<p><span class="title">Question: </span><span id="generatedQuestion">78</span></p>
+					<p><span class="title">Question: </span><span id="generatedQuestion">78+9</span></p>
 				</div> <!-- col-md-12 -->
 			</div></center><!-- row questionGeneratedRow -->
 			
