--- a/Math Learning Game Web Application/index.html
+++ b/Math Learning Game Web Application/index.html
@@ -114,6 +114,6 @@
 			</section> <!-- /.paper --> 
 		</div> <!-- /.container -->
 
-		<script src="js/gameLogic.js" language="javascript"></script>	
+		<script src="js/menuValidation.js" language="javascript"></script>	
 	</body>
 </html>
