Revert "Added getEquation() function"
This reverts commit b0897fc361cdbcc521493ae782f18cad7eeb009c.

--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -53,7 +53,7 @@
 					</div> <!-- /.col-md-6 --> 
 					
 					<div class="col-md-6 submitAnswerButtonCol">
-						<button class="mathType-button" id="submitAnswer-Button">Submit Answer</button>
+						<button class="mathType-button" id="multiplication-Button">Submit Answer</button>
 					</div> <!-- /.col-md-6 --> 	
 					</form> <!-- /.row -->
 			</center>			
