Added checkAnswer Method
Functionality is still broken!

--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -54,7 +54,8 @@
 					</div> <!-- /.col-md-6 --> 
 					
 					<div class="col-md-6 submitAnswerButtonCol">
-						<button class="mathType-button" id="submitAnswer-Button">Submit Answer</button>
+						<!--<button class="mathType-button" id="submitAnswer-Button">Submit Answer</button> -->
+						<input class="mathType-button" id="submitAnswer-Button" value="Submit Answer" type="button" />
 					</div> <!-- /.col-md-6 --> 	
 					</form> <!-- /.row -->
 			</center>			
@@ -73,6 +74,6 @@
 			
 			</section> <!-- /.paper --> 
 		</div> <!-- /.container -->
-		<script src="js/gameLogic.js" type="text/javascript"></script>		
+		<script src="js/gameLogic.js" type="text/javascript" language="javascript"></script>		
 	</body>
 </html>
