--- a/Math Learning Game Web Application/index.html
+++ b/Math Learning Game Web Application/index.html
@@ -11,7 +11,7 @@
 	</head>
 	
 	<body>
-		<div class="container">
+		<div class="container" id="container">
 			<section class="paper">
 				<article class="head">
 					<center><article contenteditable="true"><h3 id="welcome-Slogan">Welcome to <br/>Math Learning Game For Kids! :)</h3></article></center>
