Added CurrentPoints Functionality
Number current points are now incremented or decreased based on whether
the user got the question correct or not.

--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -64,7 +64,7 @@
 			
 			<center><div class="row questionGeneratedRow">
 				<div class="col-md-6">
-					<p class="title"><span class="title">Current Points: </span> <span id="generatedQuestion">30</span></p>
+					<p class="title"><span class="title">Current Points: </span> <span id="currentPoints">0</span></p>
 				</div> <!-- col-md-12 -->
 			
 				<div class="col-md-6">
