--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -7,8 +7,7 @@
 		<link href="css/style.css" rel="stylesheet" type="text/css">  <!-- Default stylesheet -->
 		<link href="css/bootstrap-grid-system-only.min.css" rel="stylesheet" type="text/css"> <!-- Bootstrap Grid System -->
 	    <link href="https://fonts.googleapis.com/css?family=Asap|Butterfly+Kids|Cedarville+Cursive|Rosario|Annie+Use+Your+Telescope|Cabin+Sketch|Calligraffitti|Caveat|Caveat+Brush" rel="stylesheet" type="text/css">  <!-- Google fonts -->
-		<meta name="description" content="This is the term project for the California State University Class CECS343 (Introduction to Software Engineering). This is a simple app game that consists of math questions that are to be answered in a particular amount of time. Users can select their level of difficulty on addition, subtraction, multiplication, and division. The game is oriented towards young children, so there are no algebra questions.">
-	<script src="js/menuValidation.js" type="text/javascript"></script>			
+		<meta name="description" content="This is the term project for the California State University Class CECS343 (Introduction to Software Engineering). This is a simple app game that consists of math questions that are to be answered in a particular amount of time. Users can select their level of difficulty on addition, subtraction, multiplication, and division. The game is oriented towards young children, so there are no algebra questions.">			
 	</head>
 	
 	<body>
@@ -50,7 +49,7 @@
 			<center><form class="row" id="userAnswerForm">
 					<div class="col-md-6">
 						<label id="answerLabel" for="answerInputInputBox">Answer:</label>
-						<input id="answerInputInputBox" type="text" name="answer" rows="5"/>
+						<input id="answerInputInputBox" type="number" name="answer" rows="5"/>
 					</div> <!-- /.col-md-6 --> 
 					
 					<div class="col-md-6 submitAnswerButtonCol">
