Failed Attempt to Pass Type of Math
Only creating this commit to revert to the previous one.

--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -21,7 +21,7 @@
 				
 			<center><section class="currentGameInfo row">
 				<div class="col-md-4">
-					<button class="mathType-button" id="levelNumber-Button">Level: <span></span></button>
+					<button class="mathType-button" id="levelNumber-Button">Level: <span id="levelNumber">45</span></button>
 				</div> <!-- /.col-md-4 -->
 			
 			<div class="col-md-4">
