Basic Quiz Functionality Now Completely Working!
The basic quiz functionality of checking user-inputted answers is now
completely working! The selected math type is now passed down to the
gameRun.html page, so the web app now loads equations according to the
user's math type choice.

Code still needs to be cleaned up, and a modal indicating that the user
either won (when reaching the goal points) or lost (if the number of
seconds from the timer reaches 0) still needs to be implemented.  Adding
an animated graphic to indicate whether a user answered an equation
correctly or not needs to be added as well.

--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -21,12 +21,15 @@
 				
 			<center><section class="currentGameInfo row">
 				<div class="col-md-4">
-					<button class="mathType-button" id="levelNumber-Button">Level: <span id="levelNumber">45</span></button>
+					<button class="mathType-button" id="levelNumber-Button">Level: <span id="levelNumber"></span></button>
 				</div> <!-- /.col-md-4 -->
 			
 			<div class="col-md-4">
-					<button class="mathType-button" id="subtraction-Button">Subtraction (-)</button>
-				</div> <!-- /.col-md-4 -->
+					<button class="mathType-button" id="addition-Button2">Addition (+)</button>
+					<button class="mathType-button" id="subtraction-Button2">Subtraction (-)</button>
+					<button class="mathType-button" id="multiplication-Button2">Multiplication (&times;)</button>
+					<button class="mathType-button" id="division-Button2">Division (&divide;)</button>
+			</div> <!-- /.col-md-4 -->
 			
 				<div class="col-md-4">
 					<div class="timer">
