Fixed high scores, they now display properly
FIxed the super buggy code in terms of splitting data from localStorage.
It should work 99% the way we want it to now, I haven't tested it fully

--- a/Math Learning Game Web Application/index.html
+++ b/Math Learning Game Web Application/index.html
@@ -27,10 +27,10 @@
                     </tr>
                     <tr>
                     	<td>1</td>
-                        <td id="user-name"></td>
-                        <td id="user-lvl"></td>
-                        <td id="user-type"></td>
-                        <td id="user-time"></td>
+                        <td id="user-name0"></td>
+                        <td id="user-lvl0"></td>
+                        <td id="user-type0"></td>
+                        <td id="user-time0"></td>
                     </tr>
                     <tr>
                     	<td>2</td>
