Switched to JSON format for high scores
The old one worked except for when the user entered a comma or space in
their name... then it tried splitting on it and the high scores got all
buggy. Also fixed functionality that I had accidentally messed with
before.

--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -34,7 +34,7 @@
             </tr>
         </table>
         <div id="pop-up-buttons">
-        	<button class="mathType-button" id="main-Menu-Button">Main Menu</button>
+        	<button class="mathType-button main-menu-button" id="game-end-main-menu-button">Main Menu</button>
             <div id="pop-up-button-spacer"></div>
         	<button class="mathType-button" id="submit-Score-Button">Submit Score</button>
         </div>
@@ -138,8 +138,7 @@
     <!-- row questionGeneratedRow --> 
     
     <div class="col-md-6">
-    	<button class="mathType-button" id="main-Menu-Button">Main Menu</button>
-        <button class="mathType-button" id="pop-Up-Button">Pop-Up</button>
+    	<button class="mathType-button main-menu-button" id="main-Menu-Button">Main Menu</button>
     </div>
     
   </section>
