--- a/Math Learning Game Web Application/index.html
+++ b/Math Learning Game Web Application/index.html
@@ -97,7 +97,7 @@
                     </tr>
                 </table>
                 <div id="pop-up-buttons">
-                    <button class="mathType-button" id="main-Menu-Button">Main Menu</button>
+                    <button class="mathType-button main-menu-button" id="main-menu-button">Main Menu</button>
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
 				<center><form class="row" onSubmit="return false">
 					<div class="col-md-12">
 					<label class="" for="nameInput">Enter your name, player! :</label>
-					<input id="nameInput" type="text" name="name" class="img-responsive" required/></div>
+					<input id="nameInput" type="text" name="name" class="img-responsive" autocomplete="off" required/></div>
 				</form></center>
 				
 				<br/> <!-- Breakspace -->
