Removed Button Gray Borders & Changed TimeDispl.
The gray area surrounding the buttons has been removed. It was the
result of a CSS issue, in which the background: CSS property by itself
removes the gray border when an image URL is followed; when using the
background-image property instead, it another property,
background-color, must be defined as transparent in order to a gray area
not to appear.

The time displayed has been changed to a whole number and not a decimal
number. This removes the lag between the numbers changing as well as any
potential jumps. However, deciding the score via the time is still
determined by a decimal number of time.

--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -36,10 +36,15 @@
             </tr>
         </table>
 
-        <div id="pop-up-buttons">
-        	<button class="mathType-button main-menu-button" id="game-end-main-menu-button">Main Menu</button>
-        	<button class="mathType-button" id="submit-Score-Button">Submit Score</button>
-        </div> <!-- /#pop-up-buttons -->
+        <div id="pop-up-buttons" class="row no-gutter">
+        	<div class="col-md-6">
+          	<button class="mathType-button" id="game-end-main-menu-button">Main Menu</button>
+          </div> <!-- /.col-md-6 -->
+
+					<div class="col-md-6">
+            <button class="mathType-button" id="submit-Score-Button">Submit Score</button>
+          </div> <!-- /.col-md-6 -->
+        </div> <!-- /#pop-up-buttons .row -->
 	</div> <!-- /#pop-up -->
 </div> <!-- Model popup dialog box END-->
 
@@ -122,7 +127,7 @@
     </center> <!-- row questionGeneratedRow --> 
    
     <center>
-    	<button class="mathType-button main-menu-button" id="main-Menu-Button">Main Menu</button>
+    	<button class="mathType-button" id="main-menu-button">Main Menu</button>
     </center>
     
   </section><!-- /.paper --> 
