--- a/Math Learning Game Web Application/index.html
+++ b/Math Learning Game Web Application/index.html
@@ -98,7 +98,7 @@
                     </tr>
                 </table>
                 <div id="pop-up-buttons">
-                  <center><button class="mathType-button main-menu-button" id="main-menu-button">Main Menu</button></center>
+                  <center><button class="mathType-button" id="main-menu-button">Main Menu</button></center>
                 </div>
             </div>
         </div>
