Have Answer Input Box Always Be in Focus + More
The answer input box is always in focus now. InnerHTML attributes in the
JavsScript have been changed to textContent for textContent is a more
efficient way to output text.

--- a/Math Learning Game Web Application/gameRun.html
+++ b/Math Learning Game Web Application/gameRun.html
@@ -99,10 +99,10 @@
     </center>
   
     <center>
-      <form class="row" id="userAnswerForm" onSubmit="return false">
+      <form class="row" id="userAnswerForm">
         <div class="col-md-6 col-sm-6">
           <label id="answerLabel" for="answerInputInputBox">Answer:</label>
-          <input id="answerInputInputBox" type="number" name="answer" rows="5" autocomplete="off"/>
+          <input id="answerInputInputBox" type="number" rows="5" autocomplete="off"/>
           <img class="responsiveImg" id="checkMarkWin" src="\assets\images\v.png" />
           <img class="responsiveImg" id="checkXLose" src="\assets\images\x.png"/>
         </div><!-- /.col-md-6 -->
